--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -10,11 +10,14 @@ on:
         default: World
     outputs:
       current-time:
-        description: 'The time when greeting'
+        description: 'The time when greeting.'
         value: ${{ jobs.reusable-job.outputs.current-time }}
+
 jobs:
   reusable-job:
     runs-on: ubuntu-latest
+    outputs:
+      current-time: ${{ steps.time.outputs.time }}
     steps:
       - name: Greet someone
         run: echo "Hello ${{ inputs.who-to-greet }}"
